# nebusfinance-test

./: README.md  alembic.ini  docker-compose.yml  postman_collection.json  pyproject.toml  test.yml
.envs_example/: .postgres
.fixtures/: 00_schema.sql  01_dump.sql  02_triggers.sql  activities.json  buildings.json  org_activities.json  organizations.json
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_05_17_0943-b6ce0025754c_initial.py  2025_05_18_0708-a305d5896f20_initial.py
app/config/: database.py  logging.py  settings.py
app/models/: __init__.py  building.py  organization.py
app/repository/: _base.py  activity.py  building.py  organization.py
app/repository/filters/: _base.py  organization.py
app/routers/: api.py  depends.py  exceptions.py
app/routers/v1/: __init__.py  building.py  organization.py
app/schemas/: building.py  organization.py
app/services/: _base.py  building.py  organization.py
app/tests/: conftest.py  factories.py
app/tests/repositories/: test_buildings.py  test_organizations.py
app/tests/routes/: test_buildings.py  test_organizations.py
app/tests/utils/: building.py  organization.py
compose/fastapi/: Dockerfile  start.sh
compose/local/fastapi/: Dockerfile
compose/local/postgres/: Dockerfile  start.sh
compose/postgres/: Dockerfile  start.sh
compose/test/postgres/: Dockerfile  start.sh
