[project]
name = "nebusfinance-test"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/SuperLalka/nebusfinance-test.git"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "0.34.0"}
fastapi = "0.115.12"
psycopg2-binary = "2.9.10"
asyncpg = "0.30.0"
alembic = "1.15.1"
SQLAlchemy = "2.0.39"
GeoAlchemy2 = {extras = ["shapely"], version = "0.17.1"}
pydantic-settings = "2.8.1"
pydantic-extra-types = "2.10.4"
python-multipart = "0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
